<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChatActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_actionbar"
        style="@style/AppTheme.ToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_actionbar"
        android:layout_above="@+id/aligner"
        android:background="@color/WHITE">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <View
        android:id="@+id/aligner"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/container_add_message"
        android:background="@color/GRAY" />

    <LinearLayout
        android:id="@+id/container_add_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_message"
            android:inputType="textMultiLine|textCapSentences"
            android:imeOptions="actionSend"
            android:singleLine="false"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="?android:textColorSecondary"
            android:maxLines="4" />

        <ImageView
            android:id="@+id/btn_submit"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@drawable/btn_submit_directable"
            android:contentDescription="@string/btn_submit" />

    </LinearLayout>

</RelativeLayout>